styles/index.css
header {
    margin-left: 5%;
    margin-right: 5%;
}

#page-title {
    margin-left: 20%;
    margin-right: 20%;
}

#profile-picture {
    border-radius: 50%;
    height: 150px;
    justify-self: center;
    width: 150px;
}

main {
    margin-bottom: 5%;
    margin-left: 5%;
    margin-right: 5%;
    padding: 10px;
    padding-bottom: 30px;
}

section.text-block {
    justify-self: center;
    width: 60%;
    & p {
        text-align: justify;
    }
}

#projects-title {
    margin-bottom: 40px;
    margin-top: 60px;
}

#projects-thumbnails {
    align-items: stretch;
    display: grid;
    gap: 40px 8%;
    grid-template-columns: repeat(auto-fit, minmax(200px, 0.2fr));
    justify-content: center;
}

.project-thumbnail {
    align-items: center;
    border-radius: 5px;
    cursor: pointer;
    display: flex;
    flex-flow: column nowrap;
    left: -10px;
    min-width: 200px;
    padding: 10px;
    position: relative;
    transition-property: background-color, box-shadow, transform;
    transition-timing-function: var(--theme-transition-func), var(--theme-transition-func), ease, ease;
    transition-duration: var(--theme-transition-duration), var(--theme-transition-duration), 0.2s, 0.2s;
}

.project-thumbnail.light {
    background-color: rgb(224, 224, 224);
    box-shadow: 10px 10px 10px rgba(31, 31, 31, 0.4);
    &.elevated-anim:hover {
        box-shadow: 10px 10px 15px rgb(31, 31, 1, 0.2);
        transform: scale(1.1, 1.1);
    }
    &.pushable:active {
        background-color: rgb(180, 180, 180);
        box-shadow: 7px 7px 5px rgb(31, 31, 1, 0.5);
        transform: scale(0.9, 0.9);
    }
}

.project-thumbnail.dark {
    background-color: rgb(60, 60, 60);
    box-shadow: 10px 10px 10px rgba(224, 224, 224, 0.4);
    &.elevated-anim:hover {
        box-shadow: 10px 10px 15px rgb(224, 224, 224, 0.3);
        transform: scale(1.1, 1.1);
    }
    &.pushable:active {
        background-color: rgb(45, 45, 45);
        box-shadow: 7px 7px 5px rgb(224, 224, 224, 0.5);
        transform: scale(0.9, 0.9);
    }
}

.thumbnail-img-container {
    align-items: center;
    border-radius: 5px;
    display: flex;
    height: 200px;
    justify-content: center;
    width: 200px;
}

.thumbnail-img {
    border-radius: 5px;
    height: auto;
    max-height: 180px;
    max-width: 180px;
    width: auto;
}

.project-name {
    font-weight: 500;
}

.project-short-description {
    margin-bottom: 0;
    font-style: oblique;
    text-align: center;
}

@media screen and (max-width: 1000px) {
    section.text-block {
        width: 80%;
    }
}

@media screen and (max-width: 520px) {
    #projects-thumbnails {
        grid-template-columns: repeat(auto-fit, minmax(160px, 0.2fr));
    }

    .project-thumbnail {
        min-width: 160px;
    }

    .thumbnail-img-container {
        height: 160px;
        width: 160px;
    }

    .thumbnail-img {
        max-height: 140px;
        max-width: 140px;
    }
}

